Agrego algunas cosas que faltaron de la entrega 2 y 3 en base a lo que corrigieron en el lucidchart

--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -27,6 +27,19 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-gson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+
 		<!-- Esto ya incluye al JUnit y al Mockito-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
