--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -39,6 +39,19 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<!--Llamadas HTTP-->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-client</artifactId>
+			<version>3.4.3</version>
+		</dependency>
+
+		<!--Serializacion JSON-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.3</version>
+		</dependency>
 
 		<!-- Esto ya incluye al JUnit y al Mockito-->
 		<dependency>
