Arreglo logica para API de geo

--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -38,7 +38,11 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-jackson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 		<!-- Esto ya incluye al JUnit y al Mockito-->
 		<dependency>
