--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 geoapi.token=dbNsJcYAneNbF8+i9DX735F7KR7mPZVELmu1wN+Nx0o=
+
+# Mail
+spring.mail.host=outlook.office365.com
+#spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=grupo4dds2022@hotmail.com
+spring.mail.password=Gulp-Enunciate-Desolate3
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
