--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+### GeoApi
 geoapi.token=dbNsJcYAneNbF8+i9DX735F7KR7mPZVELmu1wN+Nx0o=
 
-# Mail
+### Mail
 spring.mail.host=outlook.office365.com
 #spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
@@ -8,3 +9,8 @@ spring.mail.username=grupo4dds2022@hotmail.com
 spring.mail.password=Gulp-Enunciate-Desolate3
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+### Quartz
+spring.quartz.job-store-type=MEMORY #TODO: ver si no habria que cambiar esto por la que se persiste en BD
+spring.quartz.scheduler-name=ServerScheduler
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
