--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 ### Quartz
-spring.quartz.job-store-type=MEMORY #TODO: ver si no habria que cambiar esto por la que se persiste en BD
+#TODO: ver si no habria que cambiar esto por la que se persiste en BD
+spring.quartz.job-store-type=MEMORY
 spring.quartz.scheduler-name=ServerScheduler
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
