Agrego configuracion para logs

--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.quartz.job-store-type=MEMORY
 spring.quartz.scheduler-name=ServerScheduler
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+### Logging
+logging.level.root=INFO
+logging.level.dds.grupo4.tpimpacto=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
