Agrego MySQL al pom

--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -27,6 +27,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Para mandar mails -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
