Ya anda la conexion con la BD

--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+### MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4
+spring.datasource.username=root
+#spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
 ### GeoApi
 geoapi.token=dbNsJcYAneNbF8+i9DX735F7KR7mPZVELmu1wN+Nx0o=
 
