--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+### Server
+server.port=8080
+
 ### MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4
 spring.datasource.username=root
