--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.7.3</version>
 		<relativePath/>
 	</parent>
 
@@ -38,14 +38,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>2.7.0</version>
+			<version>2.7.3</version>
 		</dependency>
 
 		<!-- Quartz (scheduling) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
-			<version>2.7.0</version>
+			<version>2.7.3</version>
 		</dependency>
 
 		<!-- Esto ya incluye al JUnit y al Mockito-->
@@ -105,6 +105,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.11.0</version>
 			</plugin>
 			<!--<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
