Arreglo un poco los archivos properties

--- a/Implementacion/src/main/resources/application.properties
+++ b/Implementacion/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
 
 ### GeoApi
 geoapi.token=dbNsJcYAneNbF8+i9DX735F7KR7mPZVELmu1wN+Nx0o=
@@ -33,4 +32,5 @@ spring.quartz.properties.org.quartz.threadPool.threadCount=5
 logging.level.root=INFO
 logging.level.dds.grupo4.tpimpacto=TRACE
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.cache=DEBUG
