--- a/Implementacion/src/test/resources/application-test.properties
+++ b/Implementacion/src/test/resources/application-test.properties
@@ -1,12 +1,15 @@
+# suppress inspection "UnusedProperty" for whole file
+
 ### H2
 spring.datasource.url=jdbc:h2:mem:bdgrupo4_test;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 ### Logging
 logging.level.root=INFO
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.cache=DEBUG
