--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -98,6 +98,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- Unidades -->
+		<dependency>
+			<groupId>tech.units</groupId>
+			<artifactId>indriya</artifactId>
+			<version>2.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
