--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -105,6 +105,12 @@
 			<artifactId>indriya</artifactId>
 			<version>2.1.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
