Posible version de times() convirtiendo unidades a la UnidadBase

--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -111,6 +111,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
