--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -21,10 +21,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-quartz</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- MySQL -->
@@ -32,27 +46,6 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-
-		<!-- Para mandar mails -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>2.7.3</version>
-		</dependency>
-
-		<!-- Quartz (scheduling) -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-quartz</artifactId>
-			<version>2.7.3</version>
-		</dependency>
-
-		<!-- Esto ya incluye al JUnit y al Mockito-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- Retrofit (para APIs) -->
@@ -99,12 +92,33 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Unidades -->
+		<!-- Cache -->
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jcache</artifactId>
+			<version>5.6.10.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.6.3</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Static metamodel generator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>5.6.10.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- Unidades -->
+		<!--<dependency>
 			<groupId>tech.units</groupId>
 			<artifactId>indriya</artifactId>
 			<version>2.1.3</version>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -115,13 +129,6 @@
 			<groupId>org.javatuples</groupId>
 			<artifactId>javatuples</artifactId>
 			<version>1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>5.6.10.Final</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
