Uso MySQL como BD para los tests La H2 era un poco basica y no andaban algunas cosas

--- a/Implementacion/src/test/resources/application-test.properties
+++ b/Implementacion/src/test/resources/application-test.properties
@@ -1,8 +1,11 @@
 # suppress inspection "UnusedProperty" for whole file
 
+### MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4_test
+
 ### H2
-spring.datasource.url=jdbc:h2:mem:bdgrupo4_test;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+# spring.datasource.url=jdbc:h2:mem:bdgrupo4_test;DB_CLOSE_DELAY=-1
+# spring.datasource.username=sa
+# spring.datasource.password=sa
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.jpa.hibernate.ddl-auto=create-drop
