--- a/Angular/.editorconfig
+++ b/Angular/.editorconfig
@@ -10,6 +10,10 @@ trim_trailing_whitespace = true
 
 [*.ts]
 quote_type = single
+indent_size = 4
+
+[*.html]
+indent_size = 4
 
 [*.md]
 max_line_length = off
