--- a/UI/package.json
+++ b/UI/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
