--- a/API/pom.xml
+++ b/API/pom.xml
@@ -158,7 +158,12 @@
 			<artifactId>javatuples</artifactId>
 			<version>1.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
