--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 
 ### Server
 server.port=8080
+server.url=${API_URL:http://localhost:8080}
 
 ### MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4
