--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.url=${API_URL:http://localhost:8080}
 ### MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4
 spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
