Docker con PostgreSQL

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,14 +1,15 @@
-FROM eclipse-temurin:8-jdk-alpine
+FROM eclipse-temurin:8-jdk-ubi9-minimal
 
 WORKDIR /app
 
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
+COPY target/*.jar app.jar
+# COPY .mvn/ .mvn
+# COPY mvnw pom.xml ./
+# RUN ./mvnw dependency:resolve
 
-COPY src ./src
+# COPY src ./src
 
-ENTRYPOINT ["./mvnw", "spring-boot:run"]
+ENTRYPOINT ["java","-jar","/app/app.jar"]
 
-# ENTRYPOINT ["java","-jar","/app.jar"]
+# ENTRYPOINT ["./mvnw", "spring-boot:run"]
 # CMD ["./mvnw", "spring-boot:run"]
