--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -5,12 +5,24 @@ server.port=8080
 server.url=${API_URL:http://localhost:8080}
 
 ### MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bdgrupo4
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://db:3306/bdgrupo4?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=secret
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+
+### PostgreSQL
+spring.datasource.url=jdbc:postgresql://db:5432/bdgrupo4
+spring.datasource.username=grupo4
 spring.datasource.password=secret
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/schema.sql
+#spring.datasource.continue-on-error=true
 
 ### Cache
 # Only entities with @Cacheable annotation will use L2 cache.
