--- a/API/pom.xml
+++ b/API/pom.xml
@@ -57,6 +57,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- PostgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.1</version>
+		</dependency>
+
 		<!-- Retrofit (para APIs) -->
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
