front deployado y todo vinculado entre si

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -12,6 +12,8 @@ ENV MAIL_HOST ${MAIL_HOST}
 ENV MAIL_PORT ${MAIL_PORT}
 ENV MAIL_USERNAME ${MAIL_USERNAME}
 ENV MAIL_PASSWORD ${MAIL_PASSWORD}
+ENV BACKEND_PORT=8080
+EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar","/opt/target/tpimpacto-0.0.1-SNAPSHOT.jar"]
 
