completando docker-compose todo funcionando perfecto

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-IMAGE_API=elielbloemer/tp_miImp
+IMAGE_API=elielbloemer/api_miimp:4
+IMAGE_UI=elielbloemer/ui_miimp:1
 DB_HOST=mysql:3306/bdgrupo4
 DB_USER=springuser
 DB_PASS=ThePassword
